--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.0.2"
+    "@astrojs/preact": "^2.0.0",
+    "astro": "^2.0.2",
+    "preact": "^10.11.3"
   }
 }
