--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@astrojs/preact": "^2.0.0",
+    "@astrojs/vue": "^2.0.0",
     "astro": "^2.0.2",
-    "preact": "^10.11.3"
+    "preact": "^10.11.3",
+    "vue": "^3.2.45"
   }
 }
