--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "@astrojs/preact": "^2.0.0",
+    "@astrojs/svelte": "^2.0.0",
     "@astrojs/vue": "^2.0.0",
     "astro": "^2.0.2",
     "preact": "^10.11.3",
+    "svelte": "^3.55.1",
     "vue": "^3.2.45"
   }
 }
